--- a/public/style.css
+++ b/public/style.css
@@ -1244,53 +1244,62 @@ h1, h2, h3 {
             transition: transform .2s ease-out, -webkit-transform .2s ease-out;
   }
 
-  .message.show-menu {
-    -webkit-transform: translateX(-80px);
-            transform: translateX(-80px);
+  .message--menu-opened {
+    -webkit-transform: translateX(-60px);
+            transform: translateX(-60px);
   }
 
-  .message--mine.show-menu {
-    -webkit-transform: translateX(-240px);
-            transform: translateX(-240px);
+  .message--menu-opened.message--mine {
+    -webkit-transform: translateX(-180px);
+            transform: translateX(-180px);
+  }
+
+  .message__actions {
+    display: block;
   }
 }
 
 .message__actions {
   position: absolute;
-  right: -80px;
+  right: -70px;
 }
 
 .message--mine .message__actions {
   position: absolute;
-  right: -240px;
-}
-
-@media (MAX-width: 1024px) {
-  .message.show-menu .message__actions {
-    display: block;
-  }
+  right: -190px;
 }
 
 .message__actions-action {
   display: inline-block;
-  width: 70px;
+  width: 50px;
   text-align: center;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 10px;
   vertical-align: bottom;
-  border: 1px solid rgba(0,0,0,.1);
   margin-right: 10px;
   margin-top: 5px;
   padding-top: 30px;
   padding-bottom: 5px;
-  border-radius: 10px;
+  border-radius: 4px;
+  background: white;
   background-position: center 5px;
   background-repeat: no-repeat;
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  cursor: pointer;
+  -webkit-transition: -webkit-transform .075s ease-out;
+          transition: transform .075s ease-out, -webkit-transform .075s ease-out;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+}
+
+.message__actions-action:active {
+    -webkit-transform: scale(.85);
+            transform: scale(.85);
 }
 
 .message__actions-action--quote {
   background-image: url(/images/ic_reply_24px.svg);
-  margin-right: 0;
 }
 
 .message__actions-action--delete {
