--- a/public/style.css
+++ b/public/style.css
@@ -1442,6 +1442,10 @@ h1, h2, h3 {
   background: url(/images/edit_18px.svg) center no-repeat;
 }
 
+.message__quick-action--delete {
+  background: url(/images/delete_18px.svg) center no-repeat;
+}
+
 /* TOPIC - Motif de lock */
 
 .lock-alert {
