--- a/public/style.css
+++ b/public/style.css
@@ -1047,6 +1047,7 @@ h1, h2, h3 {
   .message__byline {
     display: table;
     margin-bottom: -10px;
+    overflow: hidden;
   }
 }
 
@@ -1055,6 +1056,7 @@ h1, h2, h3 {
 .message__byline-author {
   display: table-cell;
   vertical-align: middle;
+  white-space: nowrap;
 }
 
 @media (min-width: 768px) {
@@ -1109,6 +1111,7 @@ h1, h2, h3 {
   display: table-cell;
   vertical-align: middle;
   text-align: right;
+  white-space: nowrap;
 }
 
 @media (min-width: 768px) {
