--- a/public/style.css
+++ b/public/style.css
@@ -1510,7 +1510,58 @@ h1, h2, h3 {
 .sticker {
   width: 35px;
   height: 35px;
-  cursor: pointer;
+  cursor: -webkit-zoom-in;
+  cursor:         zoom-in;
+  -webkit-transform-origin: top left;
+          transform-origin: top left;
+}
+
+@-webkit-keyframes sticker-zoom {
+  0% {
+    -webkit-transform: scale(.25);
+  }
+  90% {
+    -webkit-transform: scale(1.1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes sticker-zoom {
+  0% {
+    transform: scale(.25);
+  }
+  90% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@-webkit-keyframes sticker-zoom-big {
+  0% {
+    -webkit-transform: scale(.5);
+  }
+  90% {
+    -webkit-transform: scale(1.1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes sticker-zoom-big {
+  0% {
+    transform: scale(.5);
+  }
+  90% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .message__content-text > .sticker {
@@ -1521,6 +1572,18 @@ h1, h2, h3 {
 .sticker--enlarged, .message__content-text > .sticker--enlarged {
   width: 140px;
   height: 140px;
+  cursor: -webkit-zoom-out;
+  cursor:         zoom-out;
+}
+
+.sticker--enlarged {
+  -webkit-animation: sticker-zoom .1s linear;
+          animation: sticker-zoom .1s linear;
+}
+
+.message__content-text > .sticker--enlarged {
+  -webkit-animation: sticker-zoom-big .1s linear;
+          animation: sticker-zoom-big .1s linear;
 }
 
 .message__quick-actions {
