--- a/public/style.css
+++ b/public/style.css
@@ -1868,3 +1868,60 @@ h1, h2, h3 {
     padding: 0 calc((100% - 900px) / 2);
   }
 }
+
+/* SMILEYS */
+
+.smileys-card {
+  width: 95%;
+  background: white;
+  margin: 10px auto;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+}
+
+.smiley-cell {
+  text-align: center;
+  padding: 10px 0;
+}
+
+.sticker-cell__code span {
+  border-radius: 4px;
+  background: rgba(255,255,255,.8);
+  padding: 0 2px;
+}
+
+.sticker-cell__code--highlight {
+  -webkit-animation: sticker-code-highlight .5s ease-out;
+          animation: sticker-code-highlight .5s ease-out;
+  color: black;
+}
+
+@-webkit-keyframes sticker-code-highlight {
+  0% {
+    -webkit-transform: scale(1);
+  }
+  30%, 60% {
+    -webkit-transform: scale(1.4);
+  }
+  100% {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes sticker-code-highlight {
+  0% {
+    transform: scale(1);
+  }
+  30%, 60% {
+    transform: translateY(-85px) scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.sticker--demo {
+  width: 70px;
+  height: 70px;
+  cursor: default;
+}
