--- a/public/style.css
+++ b/public/style.css
@@ -1875,6 +1875,7 @@ h1, h2, h3 {
   width: 95%;
   background: white;
   margin: 10px auto;
+  padding: 0 4px;
   border-radius: 2px;
   box-shadow: 0 1px 2px rgba(0,0,0,.2);
 }
@@ -1882,10 +1883,22 @@ h1, h2, h3 {
 .smiley-cell {
   text-align: center;
   padding: 10px 0;
+  font-size: 14px;
 }
 
 .sticker--demo {
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   cursor: default;
+}
+
+@media (min-width: 360px) {
+  .smiley-cell {
+    font-size: 15px;
+  }
+
+  .sticker--demo {
+    width: 70px;
+    height: 70px;
+  }
 }
