--- a/public/style.css
+++ b/public/style.css
@@ -1977,6 +1977,17 @@ h1, h2, h3 {
   }
 }
 
+.profile-ban-mention {
+  color: #D32F2F;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 auto;
+  background: url(http://jv.stkr.fr/p3w/1kkt) no-repeat 0 37px;
+  background-size: 50px;
+  padding: 40px;
+  width: 230px;
+}
+
 .profile-card {
   background: white;
   margin: 10px 8px;
