--- a/public/style.css
+++ b/public/style.css
@@ -1997,6 +1997,7 @@ h1, h2, h3 {
   box-shadow: 0 1px 2px rgba(0,0,0,.2);
   padding: 10px;
   font-size: 14px;
+  word-wrap: break-word;
 }
 
 @media (min-width: 640px) {
