--- a/public/style.css
+++ b/public/style.css
@@ -521,261 +521,139 @@ h1, h2, h3 {
 }
 
 .liste-topics {
-  display: table;
   width: 100%;
+  padding: 0 8px;
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 768px) {
   .liste-topics {
-    display: block;
+    padding: 0 10px;
   }
+}
+
+@media (min-width: 1024px) {
+  .liste-topics {
+    padding: 0;
+  }
+}
+
+.liste-topics__container {
+  display: table;
+  width: 100%;
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  border-radius: 2px;
 }
 
 .topic {
   display: table-row;
-  background: #E9EFFA;
-  border-left: grey 5px solid;
+  width: 100%;
+}
+
+/*.topic:first-child {
+  border-radius: 2px 0 0 0;
+}*/
+
+.topic:first-child .topic__label {
+  border-radius: 2px 0 0 0;
+}
+
+.topic:first-child .topic__last-page-link {
+  border-radius: 0 2px 0 0;
+}
+
+.topic:last-child .topic__label {
+  border-radius: 0 0 0 2px;
+}
+
+.topic:last-child .topic__last-page-link {
+  border-radius: 0 0 0 2px;
+}
+
+.topic__main-link {
+  display: table;
+  width: 100%;
+  color: #0D47A1;
+  min-height: 50px;
+}
+
+.topic__main-link:visited {
+  _color: #1565C0;
+}
+
+.topic__label {
+  width: 4px;
+  background: rgba(0,0,0,.2);
+  display: table-cell;
+}
+
+.topic__label--dossier1 {
+  background: #eeff41;
+}
+
+.topic__label--dossier2 {
+  background: #e65100;
+}
+
+.topic__label--lock {
+  background: #4e342e;
+}
+
+.topic__label--marque-on {
+  background: #8bc34a;
+}
+
+.topic__label--marque-off {
+  background: #E91E63;
+}
+
+.topic__label--resolu {
+  background: #388e3c;
+}
+
+.topic__label--ghost {
+  background: #80deea;
+}
+
+.topic__main-info {
+  display: table-cell;
+  padding: 3px 0 3px 5px;
+  vertical-align: middle;
+  background: white;
+}
+
+.topic:nth-child(even) .topic__main-info {
+  background: hsl(207, 90%, 98%);
+}
+
+.topic__title {
+  font-weight: bold;
   font-size: 14px;
 }
 
-@media (MAX-width: 1024px) {
-  .topic {
-    height: 48px;
-  }
+.topic__pseudo {
+  font-size: 13px;
 }
 
-@media (min-width: 1025px) {
-  .topic {
-    display: block;
-    font-size: 13px;
-  }
-}
-
-.topic.even {
-  background: #f5f5f5;
-}
-
-@media (min-width: 1025px) {
-  .liste-topics .title, .liste-topics .author, .liste-topics .nb-answers, .liste-topics .date {
-    display: inline-block;
-  }
-}
-
-@media (MAX-width: 1024px) {
-  .liste-topics .label {
-    display: table-cell;
-    width: 4px;
-    background: grey;
-  }
-}
-
-.liste-topics a:visited {
-  color: #757575;
-}
-
-.topic-main-link {
+.topic__last-page-link {
   display: table-cell;
-}
-
-@media (MAX-width: 1024px) {
-  .topic-main-link, .topic-last-page {
-    color: #1156b1; /* Blue 850 */
-    -webkit-tap-highlight-color: transparent;
-  }
-  
-  .topic-main-link:active, .topic-last-page:active {
-    background-color: rgba(255, 0, 0, .1);
-  }
-}
-
-@media (min-width: 1025px) {
-  .topic-main-link:hover, .topic-last-page:hover {
-    background: rgba(255, 85, 0, .04);
-  }
-}
-
-@media (MAX-width: 1024px) {
-  .topic-main-link {
-    padding: 4px 0;
-    padding-left: 5px;
-    border-right: 1px solid rgba(0,0,32,.03);
-    vertical-align: middle;
-  }
-}
-
-@media (min-width: 1025px) {
-  .topic-main-link {
-    display: inline-block;
-    width: 75%;
-    padding-bottom: 2px;
-  }
-}
-
-.topic-last-page {
-  display: table-cell;
-  vertical-align: middle;
+  white-space: nowrap;
   text-align: center;
+  padding: 0 3px;
+  vertical-align: middle;
+  color: #0D47A1;
+  background: white;
 }
 
-@media (MAX-width: 1024px) {
-  .topic-last-page {
-    padding: 5px 5px;
-  }
+.topic:nth-child(even) .topic__last-page-link {
+  background: hsl(207, 90%, 98%);
 }
 
-@media (min-width: 1025px) {
-  .topic-last-page {
-    display: inline-block;
-    width: 24%;
-    padding-bottom: 3px;
-    padding-top: 2px;
-  }
+.topic__answers {
+  font-size: 14px;
 }
 
-.liste-topics .title {
-  font-weight: bold;
-}
-
-@media (MAX-width: 1024px) {
-  .liste-topics .title {
-    padding-right: 2px;
-  }
-}
-
-@media (min-width: 1025px) {
-  .liste-topics .title {
-    width: 80%;
-    padding-left: 8px;
-    padding-top: 4px;
-    padding-bottom: 1px;
-  }
-}
-
-@media (MAX-width: 1024px) {
-  .liste-topics .label-marque-on .title, .liste-topics .label-marque-off .title {
-    max-height: 1.4em;
-    overflow-y: hidden;
-  }
-}
-
-@media (MAX-width: 1024px) {
-  .liste-topics .author {
-    font-size: 12px;
-    white-space: nowrap;
-  }
-}
-
-@media (min-width: 1025px) {
-  .liste-topics .author {
-    width: 19%;
-    font-size: 13px;
-  }
-}
-
-@media (MAX-width: 1024px) {
-  .liste-topics .nb-answers, .liste-topics .date {
-    line-height: 1.2;
-  }
-}
-
-.liste-topics .nb-answers {
-  white-space: nowrap;
-}
-
-@media (MAX-width: 1024px) {
-  .liste-topics .nb-answers {
-    font-size: 13px;
-  }
-}
-
-@media (min-width: 1025px) {
-  .liste-topics .nb-answers {
-    width: 38%;
-    text-align: right;
-  }
-}
-
-@media (MAX-width: 1024px) {
-  .liste-topics .nb-answers .rep {
-    display: none;
-  }
-}
-
-.liste-topics .date {
-  white-space: nowrap;
-}
-
-@media (MAX-width: 1024px) {
-  .liste-topics .date {
-    font-size: 12px;
-  }
-}
-
-@media (min-width: 1025px) {
-  .liste-topics .date {
-    width: 60%;
-    text-align: center;
-  }
-}
-
-/* FORUM - Dossiers sur la liste des topics */
-
-.liste-topics .label-dossier1 {
-  border-color: #fdd835;
-}
-
-.liste-topics .label-dossier2 {
-  border-color: #e65100;
-}
-
-.liste-topics .label-lock {
-  border-color: #4e342e;
-}
-
-.liste-topics .label-marque-on {
-  border-color: #8bc34a;
-}
-
-.liste-topics .label-marque-off {
-  border-color: #e57373;
-}
-
-.liste-topics .label-resolu {
-  border-color: #388e3c;
-}
-
-.liste-topics .label-ghost {
-  border-color: #80deea;
-}
-
-@media (MAX-width: 1024px) {
-  .label-dossier1 .label {
-    background: #fdd835;
-  }
-
-  .label-dossier2 .label {
-    background: #e65100;
-  }
-
-  .label-lock .label {
-    background: #4e342e;
-  }
-
-  .label-marque-on .label {
-    background: #8bc34a;
-  }
-
-  .label-marque-off .label {
-    background: #e57373;
-  }
-
-  .label-resolu .label {
-    background: #388e3c;
-  }
-
-  .label-ghost .label {
-    background: #80deea;
-  }
+.topic__date {
+  font-size: 13px;
 }
 
 /* FORUM - Pagination */
@@ -1698,12 +1576,12 @@ h1, h2, h3 {
 
 /* FORUM/TOPIC - Couleurs pseudos modos/admins */
 
-.pseudo-modo, .message__byline-author-pseudo--modo {
+.topic__pseudo--modo, .message__byline-author-pseudo--modo {
   color: #43A047;
 }
 
-.pseudo-admin, .message__byline-author-pseudo--admin,
-.pseudo-staff, .message__byline-author-pseudo--staff {
+.topic__pseudo--admin, .message__byline-author-pseudo--admin,
+.topic__pseudo--staff, .message__byline-author-pseudo--staff {
   color: #C62828;
 }
 
