--- a/public/style.css
+++ b/public/style.css
@@ -681,7 +681,7 @@ h1, h2, h3 {
 }
 
 .topic__last-page-link:visited {
-  color: #757575;
+  color: #9E9E9E;
 }
 
 .topic:nth-child(even) .topic__last-page-link {
