--- a/public/style.css
+++ b/public/style.css
@@ -554,6 +554,10 @@ h1, h2, h3 {
   font-size: 12px;
 }
 
+.topic--extra-small {
+  font-size: 8px;
+}
+
 .topic:first-child .topic__label {
   border-radius: 2px 0 0 0;
 }
