Update number of posts on homepage

--- a/public/style_notconnected.css
+++ b/public/style_notconnected.css
@@ -160,10 +160,15 @@ body {
   font-size: .95em;
   font-weight: bold;
   margin: 2em 0;
+  _text-decoration: underline;
 }
 
 .number {
   word-spacing: -1px;
+}
+
+.number--important {
+  font-size: larger;
 }
 
 .gnap_gnap-youtube {
