Light blue grey background for sheet instead of grey

--- a/public/style.css
+++ b/public/style.css
@@ -119,7 +119,7 @@ h1, h2, h3 {
 /* SHEET */
 
 .sheet {
-  background: #eee;
+  background: #ECEFF1;
   border: solid black;
   border-width: 1px 0 0;
   padding: 5px 0 10px;
