--- a/public/style.css
+++ b/public/style.css
@@ -980,11 +980,8 @@ h1, h2, h3 {
 
 .message {
   font-size: 14px;
-  background: white;
   margin: 0 8px 10px;
   position: relative;
-  border-radius: 2px;
-  box-shadow: 0 1px 2px rgba(0,0,0,.2);
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -1006,12 +1003,18 @@ h1, h2, h3 {
   margin-bottom: 0;
 }
 
-.message--even {
+.message__visible {
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  background: white;
+}
+
+.message--even .message__visible {
   background: hsl(207, 90%, 98%);
 }
 
 @media (min-width: 1025px) {
-  .message {
+  .message__visible, .message--even .message__visible {
     background: transparent;
     box-shadow: none;
     border-radius: none;
