Put blacklist topic styling in PHP

--- a/public/style.css
+++ b/public/style.css
@@ -687,11 +687,6 @@ h1, h2, h3 {
   font-size: 90%;
 }
 
-.topic__ignored-notice {
-  display: none;
-  font-size: 10px;
-}
-
 .topic__last-page-link {
   display: table-cell;
   white-space: nowrap;
@@ -735,6 +730,21 @@ h1, h2, h3 {
 
 .topic__date {
   font-size: 90%;
+}
+
+/* FORUM - Topic ignoré */
+
+.topic__ignored-notice {
+  display: table-cell;
+  vertical-align: middle;
+  font-size: 10px;
+  padding: 3px 0;
+}
+
+@media (MAX-width: 1024px) {
+  .topic--ignored .topic__main-link {
+    min-height: 0;
+  }
 }
 
 /* FORUM - Pagination */
