--- a/public/style.css
+++ b/public/style.css
@@ -1727,6 +1727,8 @@ h1, h2, h3 {
   border-radius: 3px;
   box-shadow: 0 2px 5px rgba(0,0,0,.1);
   padding: 5px 8px;
+  -webkit-transition: all .1s ease-out;
+          transition: all .1s ease-out;
 }
 
 .fab-post:hover .fab-post__inner {
